# gildo

./: README.md  lexicon.json  pyproject.toml  validate_lexicon.py
